--- a/newTab.html
+++ b/newTab.html
@@ -9,6 +9,10 @@
     </header>
     <p>Your Website Blocker/Tracker is on. If you would like to disable it, please turn off the chrome extension. </p>
     <p id = "blockedWebsites"> You are currently blocking the following websites: </p>
+    <p id = "visitedWebsites"> You have visited the following websites: </p>
+    <p id = "redirect"></p>
+
+    <p id = "clock"></p>
   	<script src="newTab.js"></script>
   </body>
 </html>
