--- a/newTab.html
+++ b/newTab.html
@@ -7,12 +7,15 @@
     <header>
       <h1>Website Blocker/Tracker</h1>
     </header>
-    <p>Your Website Blocker/Tracker is on. If you would like to disable it, please turn off the chrome extension. </p>
-    <p id = "blockedWebsites"> You are currently blocking the following websites: </p>
+    <h2>Your Website Blocker/Tracker is on. If you would like to disable it, please turn off the chrome extension. </h2>
+
+    <p id = "blockedWebsites"> You are currently blocking the following website URLs: </p>
+    <p> Note: Any website that starts with the blocked website's URL will be blocked. </p>
     <p id = "visitedWebsites"> You have visited the following websites: </p>
     <p id = "redirect"></p>
-
+    <p>To add a blocked website or to change the redirect URL, please open the chrome extension popup.</p>
     <p id = "clock"></p>
+    
   	<script src="newTab.js"></script>
   </body>
 </html>
