Time Tracker with extra features

--- a/newTab.html
+++ b/newTab.html
@@ -11,8 +11,9 @@
 
     <p id = "blockedWebsites"> You are currently blocking the following website URLs: </p>
     <p> Note: Any website that starts with the blocked website's URL will be blocked. </p>
-    <p id = "visitedWebsites"> You have visited the following websites: </p>
     <p id = "redirect"></p>
+    <p> You have visited the following websites: </p>
+    <p id = "visitedWebsites"></p>
     <p>To add a blocked website or to change the redirect URL, please open the chrome extension popup.</p>
     <p id = "clock"></p>
     
