--- a/newTab.html
+++ b/newTab.html
@@ -24,30 +24,80 @@
   	<div id = "home" class = "container-fluid">
 
   		<div id = "blockedWebsites">
-  			<p> You are currently blocking the following website URLs: </p>
-	    	<p> Note: Any website that starts with the blocked website's URL will be blocked. </p>
+  			<div class="card">
+			  <div id = "cardHead1" class="card-header">You are currently blocking the following website URLs: </div>
+			  <div id = "cardBody1" class ="card-body">
+			  	<table class = "table table-striped table-sm table-bordered">
+			  		<thead>
+				  		<tr>
+				  			<th class = 'w-75'> Website URL </th>
+				  			<th class = 'w-25'> Click To Unblock </th>
+				  		</tr>
+			  		</thead>
+			  		<tbody id = "tableBody1">
+			  		</tbody>
+			  	</table>
+			  </div>
+			  <div id = "cardFooter1" class ="card-footer"> Note: Any website URL that starts with any blocked website's URL will be blocked. </div>
+			</div>
   		</div>
+
+  		<br>
 
 	    <div id = "redirect">
 			<div class="card">
-			  <div id = "cardHead" class="card-header"></div>
-			  <div id = "cardBody" class ="card-body"></div>
+			  <div id = "cardHead2" class="card-header"></div>
+			  <div id = "cardBody2" class ="card-body"></div>
+			  <div id = "cardFooter2" class ="card-footer"> Visiting the extension popup allows the redirect URL to be changed.</div>
 			</div>
 	    </div>
 	    
+	    <br>
 
 	    <div id = "visitedWebsites">
-	    	<p> You have visited the following websites: </p>
+	    	<div class="card">
+			  <div id = "cardHead3" class="card-header"> You have visited the following websites: </div>
+			  <div id = "cardBody3" class ="card-body">
+			  	<table class = "table table-striped table-sm table-bordered">
+			  		<thead>
+				  		<tr>
+				  			<th class = 'w-75'> Website Domain </th>
+				  			<th class = 'w-25'> Time On Site </th>
+				  		</tr>
+			  		</thead>
+			  		<tbody id = "tableBody3">
+			  		</tbody>
+			  	</table>
+			  </div>
+			  <div id = "cardFooter3" class ="card-footer"></div>
+			</div>
 	    </div>
 
+	    <br>
+
 	    <div id = "visitedURLs">
-	    	<p> You have visited the following URLs: </p>
+	    	<div class="card">
+			  <div id = "cardHead4" class="card-header"> You have visited the following URLs: </div>
+			  <div id = "cardBody4" class ="card-body">
+			  	<table class = "table table-striped table-sm table-bordered">
+			  		<thead>
+				  		<tr>
+				  			<th class = 'w-75'> Website URL </th>
+				  			<th class = 'w-25'> Time On Site </th>
+				  		</tr>
+			  		</thead>
+			  		<tbody id = "tableBody4">
+			  		</tbody>
+			  	</table>
+			  </div>
+			  <div id = "cardFooter4" class ="card-footer"></div>
+			</div>
 	    </div>
+
+	    <br>
 
 	    <div id = "clock">	
 	    </div>
-
-	    <p>To add a blocked website or to change the redirect URL, please open the chrome extension popup.</p>
     </div>
 
   	<script src="newTab.js"></script>
