--- a/newTab.html
+++ b/newTab.html
@@ -10,7 +10,7 @@
   	<nav id = "navigation" class="navbar navbar-light bg-light">
 	  <div class="container-fluid">
 	    <div class="navbar-header">
-	      <a id = "title" class="navbar-brand" href="#home">Website Monitor</a>
+	      <a id = "title" class="navbar-brand" href="#home"><img src="/images/expanded2.png" alt="image couldn't be displayed" title="Website Monitor"></a>
 	    </div>
 	    <ul class="nav navbar-nav">
 	      <li><button id = "buttonBlock" class = "btn btn-light">Blocked Websites</button></li>
@@ -23,7 +23,7 @@
 
   	<div id = "home" class = "container-fluid">
 
-  		<div id = "blockedWebsites">
+  		<section id = "blockedWebsites">
   			<div class="card">
 			  <div id = "cardHead1" class="card-header">You are currently blocking the following website URLs: </div>
 			  <div id = "cardBody1" class ="card-body">
@@ -40,21 +40,19 @@
 			  </div>
 			  <div id = "cardFooter1" class ="card-footer"> Note: Any website URL that starts with any blocked website's URL will be blocked. </div>
 			</div>
-  		</div>
+  		</section>
 
-  		<br>
 
-	    <div id = "redirect">
+	    <section id = "redirect">
 			<div class="card">
 			  <div id = "cardHead2" class="card-header"></div>
 			  <div id = "cardBody2" class ="card-body"></div>
 			  <div id = "cardFooter2" class ="card-footer"> Visiting the extension popup allows the redirect URL to be changed.</div>
 			</div>
-	    </div>
+	    </section>
 	    
-	    <br>
 
-	    <div id = "visitedWebsites">
+	    <section id = "visitedWebsites">
 	    	<div class="card">
 			  <div id = "cardHead3" class="card-header"> You have visited the following websites: </div>
 			  <div id = "cardBody3" class ="card-body">
@@ -71,11 +69,10 @@
 			  </div>
 			  <div id = "cardFooter3" class ="card-footer"></div>
 			</div>
-	    </div>
+	    </section>
 
-	    <br>
 
-	    <div id = "visitedURLs">
+	    <section id = "visitedURLs">
 	    	<div class="card">
 			  <div id = "cardHead4" class="card-header"> You have visited the following URLs: </div>
 			  <div id = "cardBody4" class ="card-body">
@@ -92,7 +89,7 @@
 			  </div>
 			  <div id = "cardFooter4" class ="card-footer"></div>
 			</div>
-	    </div>
+	    </section>
 
 	    <br>
 
