--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
     <div class = "container-fluid">
       <br>
       <header>
-        <h2 class = "text-nowrap">Website Monitor</h2>
+        <img src="/images/condensed.png" alt="image couldn't be displayed" title="Website Monitor"/>
       </header>
 
       <hr>
